--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">E Commerce App</string>
     <string name="realm_app_id">eaa-tkpm-alycs</string>
     <string name="PARTITION">123</string>
+    <string name="login_string">LOGIN</string>
+    <string name="password">Password</string>
+    <string name="username">UserName</string>
+    <string name="password_hint">Enter password here</string>
+    <string name="username_hint">Enter username here</string>
+    <string name="forget_pass">Forget your password ?</string>
+    <string name="create_new_account">First time here ?</string>
+    <string name="sign_up">Sign up</string>
 </resources>
