+ check out layout

--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="PARTITION">123</string>
     <string name="subtotal_price">subtotal price:</string>
     <string name="zero_number">0</string>
-    <string name="discount">discount:</string>
-    <string name="total_price">TOTAL:</string>
+    <string name="discount">discount: </string>
+    <string name="total_price">TOTAL: </string>
 
     <string name="lorem">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
     <string name="check_out">CHECK OUT</string>
@@ -14,6 +14,11 @@
     <string name="quantity_error">invalid quantity</string>
     <string name="item_deleted">item is deleted</string>
     <string name="shopping_cart">Shopping cart</string>
-    <string name="text_holder">TEXT HOLDER...</string>
-    <string name="quantity_holder">quantity...</string>
+    <string name="text_holder">TEXT HOLDER…</string>
+    <string name="quantity_holder">quantity…</string>
+    <string name="receiver_name">Receiver Name</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="address">Address</string>
+    <string name="quantity">QUANTITY: </string>
+    <string name="go_to_check_out">Go to check out</string>
 </resources>
