--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="quantity_error">invalid quantity</string>
     <string name="item_deleted">item is deleted</string>
     <string name="shopping_cart">Shopping cart</string>
+    <string name="search">Search</string>
+    <string name="category">Category</string>
 </resources>
