--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -36,4 +36,6 @@
     <string name="sign_in">Have an account ?</string>
     <string name="login">Login now</string>
     <string name="empty_cart_error">Your cart doesn\'t have any items</string>
+    <string name="reset_pass">RESET ACCOUNT</string>
+    <string name="new_password">New Password</string>
 </resources>
