--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -38,4 +38,9 @@
     <string name="empty_cart_error">Your cart doesn\'t have any items</string>
     <string name="reset_pass">RESET ACCOUNT</string>
     <string name="new_password">New Password</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="user_information_title">Information</string>
+    <string name="user_order_title">Orders</string>
+    <string name="user_security_title">Security</string>
 </resources>
