--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="change_password_success">Password is changed</string>
     <string name="change_password_fail">ERROR: Your old password may be not matched</string>
     <string name="cant_find_account">ERROR: Can\'t find your account in database. Please try again next time or contach administrator</string>
+    <string name="passwordNotMatch">Password and Re password not match</string>
 </resources>
