--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="email">Email</string>
     <string name="email_hint">Enter your email here</string>
     <string name="password">Password</string>
-    <string name="password_hint">Enter your password here</string>
+    <string name="password_hint">From 6 to 128 char</string>
     <string name="forget_pass">Forget your password ?</string>
     <string name="create_new_account">First time here ?</string>
     <string name="sign_up">Sign up now</string>
