--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -77,4 +77,7 @@
     <string name="delete_order_success">Order is deleted</string>
     <string name="change_order_state_fail">ERROR: can\'t change order state</string>
     <string name="change_order_state_success">Order state is changed</string>
+    <string name="login_needed">You need to login first</string>
+    <string name="add_to_cart_fail">ERROR: can\'t add product to cart</string>
+    <string name="add_to_cart_success">Product is added</string>
 </resources>
