--- a/src/app/src/main/res/values/strings.xml
+++ b/src/app/src/main/res/values/strings.xml
@@ -80,4 +80,7 @@
     <string name="login_needed">You need to login first</string>
     <string name="add_to_cart_fail">ERROR: can\'t add product to cart</string>
     <string name="add_to_cart_success">Product is added</string>
+    <string name="description">Description</string>
+    <string name="image_url">Image URL</string>
+    <string name="create_product">Create product</string>
 </resources>
